--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 		<div class="container">
 			<div class="box">
 				<img src="img/main1.jpg">
-				<h4>ME LED TV</h4>
-				<h5>₹ 10000</h5>
+				<h4>OSCORP LED TV</h4>
+				<h5>₹ 20000</h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -50,8 +50,8 @@
 
 			<div class="box">
 				<img src="img/main2.webp">
-				<h4>ME LED TV</h4>
-				<h5>₹ 10000</h5>
+				<h4>OSCORP LED TV</h4>
+				<h5>₹ 20000</h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -59,8 +59,8 @@
 
 			<div class="box">
 				<img src="img/main3.webp">
-				<h4>ME LED TV</h4>
-				<h5>₹ 10000</h5>
+				<h4>OSCORP LED TV</h4>
+				<h5>₹ 20000</h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -68,8 +68,8 @@
 
             <div class="box">
 				<img src="img/main4.webp">
-				<h4>ME LED TV</h4>
-				<h5>₹ 10000</h5>
+				<h4>OSCORP LED TV</h4>
+				<h5>₹ 20000</h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -77,8 +77,8 @@
 
 			<div class="box">
 				<img src="img/main5.webp">
-				<h4>ME LED TV</h4>
-				<h5>₹ 10000</h5>
+				<h4>OSCORP LED TV</h4>
+				<h5>₹ 20000</h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
@@ -86,8 +86,8 @@
 
 			<div class="box">
 				<img src="img/main6.webp">
-				<h4>ME LED TV</h4>
-				<h5>₹ 10000</h5>
+				<h4>OSCORP LED TV</h4>
+				<h5>₹ 20000</h5>
 				<div class="cart">
 					<a href="#"><i class='bx bx-cart' ></i></a>
 				</div>
